--- a/api/dockerfiles/Dockerfile.api_local
+++ b/api/dockerfiles/Dockerfile.api_local
@@ -1,27 +1,25 @@
 FROM python:3.8.5-slim-buster
 
-# Install libpq-dev for psycopg2
+# Install gcc and libpq-dev for psycopg2.
 RUN apt-get update -qq
-RUN apt-get install -y libpq-dev gcc
+RUN apt-get install -y \
+  gcc \
+  libpq-dev
 
 RUN groupadd user && useradd --create-home --home-dir /home/user -g user user
 WORKDIR /home/user
 
 RUN pip install --upgrade pip
 
-COPY config/ config/
-
 COPY api/requirements.txt .
-
 RUN pip install -r requirements.txt
 
-COPY common/dist/data-refinery-common-* common/
-
 # Get the latest version from the dist directory.
-RUN pip install \
-    common/$(ls common -1 | sort --version-sort | tail -1)
+COPY common/dist/data-refinery-common-* common/
+RUN pip install common/$(ls common -1 | sort --version-sort | tail -1)
 
 COPY api/ .
+COPY config/ config/
 
 ARG SYSTEM_VERSION
 
