--- a/api/dockerfiles/Dockerfile.api_production
+++ b/api/dockerfiles/Dockerfile.api_production
@@ -1,30 +1,28 @@
 FROM python:3.8.5-buster
 
-# Install libpq-dev and gcc for psycopg2
+# Install gcc and libpq-dev for psycopg2.
 RUN apt-get update -qq
-RUN apt-get install -y libpq-dev gcc
+RUN apt-get install -y \
+  gcc \
+  libpq-dev
 
 RUN groupadd user && useradd --create-home --home-dir /home/user -g user user
 WORKDIR /home/user
 
-COPY config/ config/
-
 COPY api/requirements.txt .
-
 RUN pip install -r requirements.txt
 
-COPY common/dist/data-refinery-common-* common/
-
 # Get the latest version from the dist directory.
-RUN pip install \
-    common/$(ls common -1 | sort --version-sort | tail -1)
+COPY common/dist/data-refinery-common-* common/
+RUN pip install common/$(ls common -1 | sort --version-sort | tail -1)
+
+# uWSGI.
+RUN pip install uwsgi
 
 COPY api/ .
+COPY config/ config/
 
-# uWSGI
-RUN pip install uwsgi
 RUN chmod +x /home/user/collect_and_run_uwsgi.sh
-
 RUN mkdir -p /tmp/www/static
 RUN chown user /tmp/www/static
 
@@ -34,8 +32,8 @@ ENV SYSTEM_VERSION $SYSTEM_VERSION
 
 USER user
 
-# We collect Django's static files and expose them
-# as a volume so that Nginx can serve them directly.
+# We collect Django's static files and expose them as a volume so that Nginx
+# can serve them directly.
 VOLUME /tmp/www/static
 
 EXPOSE 8081
