--- a/workers/dockerfiles/Dockerfile.affymetrix_local
+++ b/workers/dockerfiles/Dockerfile.affymetrix_local
@@ -1,14 +1,18 @@
 FROM ccdlstaging/dr_affymetrix:latest
 
-USER root
+# Fail in case of an error at any stage in the pipe.
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+WORKDIR /home/user
 
 # Remove the version of common already installed.
-RUN rm -r common/
-RUN pip3 uninstall -y data_refinery_common
+RUN rm -r common && \
+    pip3 uninstall -y data_refinery_common
 
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
-RUN pip3 install common/$(ls common -1 | sort --version-sort | tail -1)
+RUN pip3 install --ignore-installed --no-cache-dir \
+    common/$(ls common -1 | sort --version-sort | tail -1)
 
 ARG SYSTEM_VERSION
 
