--- a/api/dockerfiles/Dockerfile.api_local
+++ b/api/dockerfiles/Dockerfile.api_local
@@ -1,29 +1,33 @@
 FROM python:3.8.5-slim-buster
 
-# Install gcc and libpq-dev for psycopg2.
-RUN apt-get update -qq
-RUN apt-get install -y \
-  gcc \
-  libpq-dev
+# Fail in case of an error at any stage in the pipe.
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-RUN groupadd user && useradd --create-home --home-dir /home/user -g user user
+# Install gcc and libpq-dev for psycopg2.
+RUN apt-get update -qq && \
+    apt-get install -y \
+        gcc \
+        libpq-dev
+
+RUN groupadd user && \
+    useradd --create-home --home-dir /home/user -g user user
 WORKDIR /home/user
 
-RUN pip install --upgrade pip
-
 COPY api/requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --ignore-installed -r requirements.txt && \
+    rm -r /root/.cache
 
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
-RUN pip install common/$(ls common -1 | sort --version-sort | tail -1)
+RUN pip install --ignore-installed \
+    common/$(ls common -1 | sort --version-sort | tail -1)
 
 COPY api/ .
 COPY config/ config/
 
 ARG SYSTEM_VERSION
-
-ENV SYSTEM_VERSION $SYSTEM_VERSION
+ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
 
